Fix issues with double scroll bars on slow connections

--- a/src/components/react/Lifecycle/Lifecycle.module.scss
+++ b/src/components/react/Lifecycle/Lifecycle.module.scss
@@ -23,6 +23,7 @@
 .root {
   position: relative;
   display: none;
+  overflow: hidden;
 
   @media (min-width: 984px) {
     display: block;
